
noinst_LTLIBRARIES = libglib.la

libglib_la_CFLAGS = $(GLOBAL_CFLAGS) $(GLIB_CFLAGS)

libglib_la_SOURCES = \
	garray.c \
	gfileutils.c \
	glist.c \
	gmem.c \
	gstrfuncs.c \
	gobject.c

noinst_HEADERS = \
	config.h \
	garray.h \
	gdebug.h \
	gfileutils.h \
	glist.h \
	gmacros.h \
	gmem.h \
	gmessages.h \
	gprintfint.h \
	gstrfuncs.h \
	gtypes.h
