check-local: ../swfdec-test
	for file in $(srcdir)/*.sts; do \
	  ../swfdec-test --script $$file `cd $(srcdir) && pwd`/`basename $$file .sts`*.swf || exit $?; \
	done

EXTRA_DIST = \
	button-events.c \
	button-events.stas \
	button-events.sts \
	button-events-button-5.swf \
	button-events-button-5.swf.trace \
	button-events-button-6.swf \
	button-events-button-6.swf.trace \
	button-events-button-7.swf \
	button-events-button-7.swf.trace \
	button-events-button-8.swf \
	button-events-button-8.swf.trace \
	button-events-menu-5.swf \
	button-events-menu-5.swf.trace \
	button-events-menu-6.swf \
	button-events-menu-6.swf.trace \
	button-events-menu-7.swf \
	button-events-menu-7.swf.trace \
	button-events-menu-8.swf \
	button-events-menu-8.swf.trace \
	button-event-with-key-5.swf \
	button-event-with-key-5.swf.trace \
	button-event-with-key-6.swf \
	button-event-with-key-6.swf.trace \
	button-event-with-key-7.swf \
	button-event-with-key-7.swf.trace \
	button-event-with-key-8.swf \
	button-event-with-key-8.swf.trace \
	button-event-with-key.c \
	button-hittest-5.swf \
	button-hittest-5.swf.trace \
	button-hittest-6.swf \
	button-hittest-6.swf.trace \
	button-hittest-7.swf \
	button-hittest-7.swf.trace \
	button-hittest-8.swf \
	button-hittest-8.swf.trace \
	button-hittest.c \
	button-hittest.stas \
	button-hittest.sts \
	crash-0.5.90-up-to-date.as \
	crash-0.5.90-up-to-date.stas \
	crash-0.5.90-up-to-date.sts \
  	crash-0.5.90-up-to-date.swf \
	crash-0.5.90-up-to-date.swf.trace \
	definebutton-5.swf \
	definebutton-5.swf.trace \
	definebutton-6.swf \
	definebutton-6.swf.trace \
	definebutton-7.swf \
	definebutton-7.swf.trace \
	definebutton-8.swf \
	definebutton-8.swf.trace \
	definebutton.stas \
	definebutton.sts \
	definebutton.xml \
	key-isdown-mouse.as \
	key-isdown-mouse.stas \
	key-isdown-mouse.sts \
	key-isdown-mouse.swf \
	key-isdown-mouse.swf.trace \
	mouse-addProperty-relevant.as \
	mouse-addProperty-relevant.stas \
	mouse-addProperty-relevant.sts \
	mouse-addProperty-relevant-5.swf \
	mouse-addProperty-relevant-5.swf.trace \
	mouse-addProperty-relevant-6.swf \
	mouse-addProperty-relevant-6.swf.trace \
	mouse-addProperty-relevant-7.swf \
	mouse-addProperty-relevant-7.swf.trace \
	mouse-addProperty-relevant-8.swf \
	mouse-addProperty-relevant-8.swf.trace \
	mouse-movie-below-movie.as \
	mouse-movie-below-movie-5.swf \
	mouse-movie-below-movie-5.swf.trace \
	mouse-movie-below-movie-6.swf \
	mouse-movie-below-movie-6.swf.trace \
	mouse-movie-below-movie-7.swf \
	mouse-movie-below-movie-7.swf.trace \
	mouse-movie-below-movie-8.swf \
	mouse-movie-below-movie-8.swf.trace \
	mouse-movie-below-nonevent-movie.as \
	mouse-movie-below-nonevent-movie-5.swf \
	mouse-movie-below-nonevent-movie-5.swf.trace \
	mouse-movie-below-nonevent-movie-6.swf \
	mouse-movie-below-nonevent-movie-6.swf.trace \
	mouse-movie-below-nonevent-movie-7.swf \
	mouse-movie-below-nonevent-movie-7.swf.trace \
	mouse-movie-below-nonevent-movie-8.swf \
	mouse-movie-below-nonevent-movie-8.swf.trace \
	mouse-scaled.as \
	mouse-scaled.stas \
	mouse-scaled.sts \
	mouse-scaled-5.swf \
	mouse-scaled-5.swf.trace \
	mouse-scaled-6.swf \
	mouse-scaled-6.swf.trace \
	mouse-scaled-6.swf.trace.org \
	mouse-scaled-7.swf \
	mouse-scaled-7.swf.trace \
	mouse-scaled-7.swf.trace.org
